<resources>
    <string name="app_name">Snap Share</string>

    <!--Main screen and tabs-->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add</string>
    <string name="title_search">Search</string>
    <string name="title_account">Account</string>

    <!--Login screen-->
    <string name="login_username_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_submit">Login</string>
    <string name="registry_redirect_hint">"Don't have an account?"</string>
    <string name="registry_redirection">Sign up</string>
    <string name="login_necessity_description">Signing in is required to continue using the app.</string>
    <string name="invalid_email_password">Please provide a valid email and password.</string>

    <!--Register screen-->
    <string name="username">Username</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype password</string>
    <string name="register">Register</string>
    <string name="you_must_fill_all_information">You must fill all information</string>
    <string name="invalid_mail">Email is invalid</string>
    <string name="password_must_more_than_6_char">Password must be more than six character</string>
    <string name="password_must_be_same">Password must be same</string>
    <string name="please_wait">Please wait ...</string>
    <string name="fail_try_again_later">Fail! Please try again later</string>
    <string name="like_counter">%d like%s</string>

    <!--Post Screen -->
    <string name="write_description">Write description...</string>
    <string name="share">Share</string>
    <string name="new_post">New Post</string>

    <!--Search Screen-->
    <string name="search_hint">Search user</string>
    <string name="search_result">Found %d result%s</string>
    <string name="search_no_resutl">No result is found</string>
    <string name="incorrect_email_password">Email or Password is incorrect</string>
    <string name="log_out">Log out</string>
</resources>
