<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="RegisterViewModel"
            type="com.teamandroid.snapshare.ui.register.RegisterViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_log_in_background"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/login_tittle_top_margin"
            android:layout_marginBottom="@dimen/login_tittle_bottom_margin"
            android:fontFamily="@font/scriptin"
            android:text="@string/app_name"
            android:textColor="@color/white_color"
            android:textSize="@dimen/login_tittle_text_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_app_name"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin_edit_text"
            android:background="@color/text_background_color"
            android:fontFamily="@font/freight_sans_medium"
            android:hint="@string/username"
            android:padding="@dimen/padding_edit_text"
            android:text="@={RegisterViewModel.username}"
            android:textColor="@color/milk_color"
            android:textColorHint="@color/milk_color" />

        <EditText
            android:id="@+id/edit_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_username"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin_edit_text"
            android:background="@color/text_background_color"
            android:fontFamily="@font/freight_sans_medium"
            android:hint="@string/full_name"
            android:padding="@dimen/padding_edit_text"
            android:text="@={RegisterViewModel.fullName}"
            android:textColor="@color/milk_color"
            android:textColorHint="@color/milk_color" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_full_name"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin_edit_text"
            android:background="@color/text_background_color"
            android:fontFamily="@font/freight_sans_medium"
            android:hint="@string/email"
            android:padding="@dimen/padding_edit_text"
            android:text="@={RegisterViewModel.email}"
            android:textColor="@color/milk_color"
            android:textColorHint="@color/milk_color" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_email"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin_edit_text"
            android:background="@color/text_background_color"
            android:fontFamily="@font/freight_sans_medium"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/padding_edit_text"
            android:text="@={RegisterViewModel.password}"
            android:textColor="@color/milk_color"
            android:textColorHint="@color/milk_color" />

        <EditText
            android:id="@+id/edit_retype_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_password"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin_edit_text"
            android:background="@color/text_background_color"
            android:fontFamily="@font/freight_sans_medium"
            android:hint="@string/retype_password"
            android:inputType="textPassword"
            android:padding="@dimen/padding_edit_text"
            android:text="@={RegisterViewModel.confirmPassword}"
            android:textColor="@color/milk_color"
            android:textColorHint="@color/milk_color" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_retype_password"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin_edit_text"
            android:background="@drawable/transparent_background_bordered"
            android:fontFamily="@font/freight_sans_medium"
            android:onClick="@{(v) -> RegisterViewModel.onClickRegisterButton(v)}"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/light_grey_color" />

    </RelativeLayout>
</layout>